<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Licensed to the Apache Software Foundation (ASF) under one or more
  ~ contributor license agreements.  See the NOTICE file distributed with
  ~ this work for additional information regarding copyright ownership.
  ~ The ASF licenses this file to You under the Apache License, Version 2.0
  ~ (the "License"); you may not use this file except in compliance with
  ~ the License.  You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.apache.streampipes</groupId>
        <artifactId>streampipes-parent</artifactId>
        <version>0.97.0-SNAPSHOT</version>
    </parent>

    <artifactId>streampipes-data-explorer-influx</artifactId>
    <description>This module houses all InfluxDB-specific implementations necessary to fulfill data explorer storage
        functionalities utilizing an underlying instance of InfluxDB.
    </description>

    <dependencies>
        <!-- StreamPipes Dependencies -->
        <dependency>
            <groupId>org.apache.streampipes</groupId>
            <artifactId>streampipes-client-api</artifactId>
            <version>0.97.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.streampipes</groupId>
            <artifactId>streampipes-commons</artifactId>
            <version>0.97.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.streampipes</groupId>
            <artifactId>streampipes-data-explorer</artifactId>
            <version>0.97.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.streampipes</groupId>
            <artifactId>streampipes-data-explorer-api</artifactId>
            <version>0.97.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.streampipes</groupId>
            <artifactId>streampipes-data-explorer-export</artifactId>
            <version>0.97.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.apache.streampipes</groupId>
            <artifactId>streampipes-model</artifactId>
            <version>0.97.0-SNAPSHOT</version>
        </dependency>

        <!-- External dependency -->
        <dependency> <!-- SHOULD BE REMOVED SOON -->
            <groupId>org.lightcouch</groupId>
            <artifactId>lightcouch</artifactId>
        </dependency>
        <dependency>
            <groupId>org.influxdb</groupId>
            <artifactId>influxdb-java</artifactId>
        </dependency>

        <!-- Test dependencies -->
        <dependency>
            <groupId>org.apache.streampipes</groupId>
            <artifactId>streampipes-test-utils</artifactId>
            <version>0.97.0-SNAPSHOT</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

</project>